Static site (2014-05-08 shi)
==============================
News header


Static site (2014-05-08 shi)
==============================
News styles
Added news translations (not entries)
Added Git-flavoured Markdown for news entries
linebreaks for Markdown
Title links to main page


Static site (2014-05-01 shi)
==============================
Added 2 pages for news (single / list)


Static site (2014-04-30 shi)
==============================
Added Spanish, Hindi, Japanese, Chinese (Simplified) translations
Added news page


Static site (2014-04-29 shi)
==============================
Rewrite html for static site
Contents are now up for translations
Added French translation
No more inline css