@@ -413,7 +413,7 @@ Top of page
 About d-portal.org
 
 #read_more_text
-Read more
+Read more about data quality and why it matters
 
 #xml_data_description_title_text
 How is the data calculated?
@@ -542,7 +542,7 @@ Where does the money go? (Sectors) - Aggregate data by DI's Investments to End P
 Heatmap - A count of IATI activities that contain specific coordinates in their location data. NB. that very few IATI activities currently contain this data.
 
 #main_data_paragraph6_text
-The rest of the data on the page comes from IATI. Typically this will have been updated within the last 24 hours.
+The rest of the data on the page comes from IATI. Typically this will have been updated every Sunday.
 
 #view_active_text
 All active projects for {country_name}
