@@ -30,9 +30,8 @@ a.top.sav:hover	{border-top:5px solid rgba(255,165,0,1);}
 a.top.hub:hover	{border-top:5px solid rgba(255,255,255,1);}
 
 .ctwrap		{width:100%; background-color:#2573CD; padding:140px 0 50px 0;}
-.cthead		{color:#fff; line-height:1.25em; font-size:22px; padding:40px 0 40px 40px;}
-.ctinfo		{font-size:18px; line-height:1.4em; color:#E8F6FF;}
-.ctinfo.top	{padding-top:10px;}
+.cthead		{color:#fff; line-height:1.25em; font-size:22px; padding:60px 0 0px 40px;}
+.ctinfo		{font-size:18px; line-height:1.4em; color:#E8F6FF; padding-top:10px;}
 
 .cteg		{width:100%; background-color:rgba(10, 14, 20, 0.91); padding:50px 0 100px 0;}
 .ctegwrap	{font-size:1.2em; color:#fff; line-height:1.2em; padding:60px 0 10px 0; margin-bottom:40px;}
