@@ -30,9 +30,9 @@
 	<div class="defcon">
 		<div class="halfcon"><img src="{root}art/dp_logo.400.png" alt="d-portal.org logo" width="400" height="400"/></div><div class="halfcon">
 			<div class="cthead">
+				<span class="cteghead">{about_paragraph_title_text}</span>
 				<p>{about_paragraph1_text}</p>
-				<p class="ctinfo top">{about_paragraph2_text}</p>
-				<p class="ctinfo">{about_paragraph3_text}</p>
+				<p class="ctinfo">{about_paragraph2_text}</p>
 			</div>
 		</div>
 	</div>
@@ -41,13 +41,12 @@
 <div class="cteg">
 	<div class="defcon">
 		<div class="ctegwrap">
-			<span class="cteghead">{about_paragraph_title_text}</span>
-			<p><span class="bold">d-portal.org</span> {about_paragraph4_text}</p>
-			<p>{about_paragraph5_text} <a href="http://www.oecd.org/dac/stats/crsguide.htm" target="_blank" class="co">OECD DAC Creditor Reporting System</a> {about_paragraph6_text}</p>
-			<p>{about_paragraph7_text}</p>
+			<p>{about_paragraph3_text}</p>
+			<p>{about_paragraph4_text}</p>
+			<p><span class="bold">d-portal.org</span> {about_paragraph6_text}</p>
+			<p><span class="cteghead">{about_paragraph7_text}</span></p>
 			<p>{about_paragraph8_text}</p>
-			<p><span class="bold">d-portal.org</span> {about_paragraph9_text}</p>
-			<p><span class="bold">d-portal.org</span> {about_paragraph10_text} <a href="http://www.aidtransparency.net/" target="_blank" class="co">IATI</a> {about_paragraph11_text} <a href="http://devinit.org/" target="_blank" class="co">Development Initiatives (DI)</a> {about_paragraph12_text}</p>
+			<p>{about_paragraph9_text}</p>
 		</div>
 		
 	</div>
@@ -86,7 +85,7 @@
 		<div class="qabt">{q_example1_text}</div>
 		<div class="qinfo">{q_example1_info1_text} <span class="qdef">limit=10</span> {q_example1_info2_text} <span class="qdef">orderby=day_start</span> {q_example1_info3_text} <span class="qdef">day_start_gt=1950-01-01</span>.</div>
 		
-		<a href="http://dev.ctrack.iatistandard.org/q.xml?from=jml,act,sector,country&country=bd&sector_percent_not_null" class="qeg">http://dev.ctrack.iatistandard.org/q.xml?from=jml,act,sector,country&amp;country=bd&amp;sector_percent_not_null</a>
+		<a href="http://d-portal.org/q.xml?from=jml,act,sector,country&country=bd&sector_percent_not_null" class="qeg">http://d-portal.org/q.xml?from=jml,act,sector,country&amp;country=bd&amp;sector_percent_not_null</a>
 		<div class="qabt">{q_example2_text}</div>
 		<div class="qinfo">{q_example2_info1_text} <span class="qdef">country=bd</span> {q_example2_info2_text} <span class="qdef">sector_percent_not_null</span>. {q_example2_info3_text}</div>
 		
@@ -119,7 +118,7 @@
 
 <div class="footwrap">
 	<div class="footcon">
-		<div class="team"><a href="http://www.aidtransparency.net/" target="_blank" title="{footer1_tip_text}">
+		<div class="team"><a href="mailto:queries@d-portal.org" target="_blank" title="{footer1_tip_text}">
 			{footer1_text}</a>
 		</div><div class="mit">
 			{footer5_text}
