@@ -1,0 +1,28 @@
+#blog_title trim=ends
+
+Current plans
+
+#blog_body form=markdown
+
+Following an initial period of development in the first quarter of 2014, and the <a href="https://www.youtube.com/watch?v=sBAGH8JKJAU&sns=em">launch at the Global Partnership meeting</a> in April, d-portal is now entering a period of consolidation and consultation.  During this 3-4 month period we are aiming to do the following...
+
++ Stabilise the code base
++ Enable easy adoption of the code for anyone to create and customise individual country d-portals
++ Allow the addition of other datasets as simply as possible
++ Develop full guidance for those adopting the code 
++ Write up comprehensive documentation and methodology
++ Consult with potential users around the longer term direction for d-portal
++ Consider means of funding and sustaining support and updates for d-portal
+
+This page will contain any updates to information, and announcements on d-portal over the coming months.  If you would like to keep up to date with news on d-portal please subscribe to the Google group
+
+__Get in touch...__
+
+If you have any issues around **a specific organisation’s IATI data** please contact the IATI support team – <a href="mailto:support@iatistandard.org">support@iatistandard.org</a>
+
+If you have **any other queries about d-portal**, any comments or suggestions please do contact us at <a href="queries@d-portal.org">queries@d-portal.org</a>
+
+
+<a href="/about.html">Interested in funding d-portal?</a>
+
+<a href="/about.html">How to create a country d-portal</a>
