@@ -29,7 +29,7 @@
 </script>
 
 #blog_wrap
-<!--	All blog posts on a single page	-->
+<!--	Main News page - all blog posts on a single page	-->
 <div class="blog_wrap">
 	<a href="{tongue_root}{it._fullfilename}" class="blog_title">{it.blog_title}</a>
 	<div class="blog_date">{posted_on_text} {it._date}</div>
