@@ -37,16 +37,6 @@
 			</td>
 			<td class="options">{tongue_select}</td>
 		</tr>
-		<tr>
-			<td class="options">
-				<form action="">
-				<select id="flava_select" name="flava">
-					<option value="original">{flava_original_text}</option> 
-					<option value="high">{flava_high_visibility_text}</option> 
-				</select>
-				</form>
-			</td>
-		</tr>
 	</table>
 </div>
 
