@@ -1,6 +1,9 @@
 Static site (2014-05-08 shi)
 ==============================
 News header
+Added news post
+No themes
+CSS Styles for path buttons
 
 
 Static site (2014-05-08 shi)
